--- a/papers/icaps2011/icaps2011.tex
+++ b/papers/icaps2011/icaps2011.tex
@@ -156,6 +156,40 @@ Mprime & 8 & 64 & 152 & 0.08 & 1.11 & 1.05 & 1.04   \\
 \label{table:domains}
 \end{table*} 
 
+ \begin{table*}[ht]
+\centering
+\begin{tabular}{l c c c c }
+\hline\hline
+Domain &\# goals & \# fluents  & \# objects  & mutexdensity   \\ 
+\hline
+Freecell & 2 & [28,34] 31.17, 1.68  & [32, 38] 35.17, 1.68  & [0.14, 0,17] 0.15, 0.005     \\
+Grid & [7,9] 8, 1  & [58,59] 74.07, 9.38 & [56,90] 72.07, 9.38  & [0.08, 0.1] 0.09, 0.009     \\
+Mprime & [8,9] 9, 1 & [32,40] 36, 2.09  & [42,52] 47, 2.009 & [0.03 0.03] 0.03, 0     \\
+IPC6 all& [1,110] 23.32, 19.2 & [4,217] 30.6, 25.5  & [7,301] 45.2, 35.16  & [0,0.48] 0.1, 0.07     \\
+\hline
+\end{tabular}
+\caption{Statistics of some features per domains in the train-set. Values given are [min,max] average, standard deviation respectively. On feature is constant, one number is given.}
+\label{table:statistics}
+\end{table*} 
+
+
+One additional technical difficulty arose with CMA-ES: each parameter is here restricted to an interval. This seems reasonable and makes the global algorithm more stable. Hence the parameters of the optimizer are actually normalized linearly onto the [0,1] interval. It is hence possible to apply a simple version of the box constraint handling technique described in \cite{hansen2009tec}, with a penalty term simply defined by \begin{math}||p^{feas}-p|| \end{math}, where \begin{math}p^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}p^{feas}\end{math} was recorded as a feasible solution , and later passed to the ANN. Note that the GeneTransferer and the ANN itself cannot send hints outside of the box. In order to not to compromise too much CMA-ES, several iterations of this were carried out for one hint of the ANN and one gene-transfer.
+
+The implementation of LaO algorithm uses the Shark library \cite{shark08} for CMA-ES and the FANN library for ANN \cite{nissen}. To evaluate each parameter-setting with each instance,  a cluster was used, that has approximately 60 nodes, most of them with 4 cores, some with 8. However, this cluster is used by many researchers, therefore our algorithm was automatically scheduled to only use the spare CPU cycles on this cluster.
+
+Because of the heterogeneity of the hardware architecture used here, it is not possible to rely on accurate predicted running times. Therefore, for each evaluation, the number of YAHSP evaluations is fixed for DaE. Note that the number of YAHSP evaluations is approximately proportional to the running time, so that the execution time for a particular computer is also determined independently of the parameter-settings. For example, even if the size of the population is increased, because of the fixed number of evaluations that is allowed, the number of generations will be limited accordingly in order to approximatively allow the same running time for each parameter-setting optimization. 
+
+Moreover, since DaE is not deterministic, 11 independent runs were carried out for each DaE experiment with a given paramter-set, and the fitness of this parameter set was taken to be the median fitness-value obtained by DaE.
+
+
+\begin{figure}[h!]
+  \centering
+    \includegraphics[width=0.5\textwidth]{results/freecell_train_objects_mutex-density.png}
+  \caption{Distribution of the features "number of objects" and "mutex-density" in train-set in domain Freecell. }
+\label{figure:featuresdistribution}
+\end{figure}
+
+
 
 \begin{table*}[ht]
 \centering
@@ -181,20 +215,18 @@ Number of offspring & 100& 2 000& 700 \\
 \label{table:parameters}
 \end{table*} 
 
-
-One additional technical difficulty arose with CMA-ES: each parameter is here restricted to an interval. This seems reasonable and makes the global algorithm more stable. Hence the parameters of the optimizer are actually normalized linearly onto the [0,1] interval. It is hence possible to apply a simple version of the box constraint handling technique described in \cite{hansen2009tec}, with a penalty term simply defined by \begin{math}||p^{feas}-p|| \end{math}, where \begin{math}p^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}p^{feas}\end{math} was recorded as a feasible solution , and later passed to the ANN. Note that the GeneTransferer and the ANN itself cannot send hints outside of the box. In order to not to compromise too much CMA-ES, several iterations of this were carried out for one hint of the ANN and one gene-transfer.
-
-The implementation of LaO algorithm uses the Shark library \cite{shark08} for CMA-ES and the FANN library for ANN \cite{nissen}. To evaluate each parameter-setting with each instance,  a cluster was used, that has approximately 60 nodes, most of them with 4 cores, some with 8. However, this cluster is used by many researchers, therefore our algorithm was automatically scheduled to only use the spare CPU cycles on this cluster.
-
-Because of the heterogeneity of the hardware architecture used here, it is not possible to rely on accurate predicted running times. Therefore, for each evaluation, the number of YAHSP evaluations is fixed for DaE. Note that the number of YAHSP evaluations is approximately proportional to the running time, so that the execution time for a particular computer is also determined independently of the parameter-settings. For example, even if the size of the population is increased, because of the fixed number of evaluations that is allowed, the number of generations will be limited accordingly in order to approximatively allow the same running time for each parameter-setting optimization. 
-
-Moreover, since DaE is not deterministic, 11 independent runs were carried out for each DaE experiment with a given paramter-set, and the fitness of this parameter set was taken to be the median fitness-value obtained by DaE.
-
 \section{Results}
 \label{section:results}
 
 In the Planning and Learning Part of IPC2011 (IPC), 5 sample domains were pre-published, with a corresponding problem-generator for each domain: Ferry, Freecell, Grid, Mprime, and Sokoban. Ferry and Sokoban were excluded from this study since there were not enough number of instances to learn any mapping. For each of the remaining 3 domains, 100 instances were generated, since this seemed to be appropriate for a running time of approximately 2-3 weeks: The competition track description fixes running time as 15 minutes. Since For each instance, 11 independent trials were run on a dedicated server to measure the median of number of evaluations with our default parameters. The termination criterion was the number of YAHSP evaluations. The median of those 11 runs were used as a termination criterion for each instance in the train set on any computer. However, many instances were never solved within 15 minutes, and those instances were dropped from the rest of experiment. The remaining instances were used for training.
 
+Table \ref{table:domains} shows the data for each domain, as you can see from the approximately 100 instances from each domain we could not always make use of all training instances, except in the domain Freecell (108). In the other domains the more complex isntances could not be solved in 15 minutes on the dedicated server. Table \ref{table:statistics} shows some statistical properties of some selected features for each domain. Most of the features were correlated with each other, like \#objects, \#fluents, \#goals and also thwe wc-features. This meaans that actually we do not have much information on the input-side. Mutex-density is good, because it is independent of the other features, as it is shown in figure \ref{figure:featuresdistribution}. You can see that we have all kind of mutex-densities regardles of the number of objects. Standard-deviation-boxes look also the same for each value of number of objects.
+
+Table \ref{table:domains} also shows information about results. The Mean Square Error (MSE) of the retrained ANN is shown for each domain. Note that since there can be multiple optimal parameters for the same instance (fitness-function is discrete), there might be an unavoidable error of the ANN.
+
+5 iterations of CMA-ES were carried out, followed by one ANN and one Genetransferer, and this cycle was iterated in the algorithm. This means that for example for the Grid domain LaO was running for 10 iterations and CMA-ES was called 50 times in total. One has to note that this is not much, but we were restricted by time.
+
+The ANN had 3 fully connected layers, and the hidden layer had the same number of neurons as the input. Learning was done by the conventional back-propagation algorithm, which is the default in FANN. In one iterations of LaO the ANN was only trained once for 50 iterations (called epochs in FANN) without reseting the weights, so that we avoid over-training. The aim of not reseting the weights was that the ANN makes a graded transition from the previous best known parameter-set to the new best known parameter-set, which could help optimization by trying some intermediate values. This means that over the 10 iterations of LaO in the domain Grid 500 iterations (epochs) of the ANN were carried out in total. However, note that the best parameters were trained with much less iterations, depending on the time when they were found. In the worst case, if the best parameter was found in the last iteration of LaO, it was trained for only 50 epochs and not used anymore, only recorded in the logs. This is why retraining is needed in the end.
 
  \begin{table}[tb!]
 \centering
@@ -207,61 +239,34 @@ Grid & ~2 -- 24 & 66 -- ~60  & 16 -- 11 & 17 -- ~5  &    \\
 Mprime &  ~2 -- 45& 59 -- 36 & ~2 -- 11  & 18 -- ~8  &    \\
 \hline
 \end{tabular}
-\caption{For each method (default, CMA-ES, Transferer=Genetransferer or ANN), the percentage of instances on which this method gave the best parameter set. Each cell shows 2 figures: the first one considers all occurences of a method, no matter if another method also lead an equivalent parameter set, as good as the first one. The second figures only considers the first method (from left to right) that discovered the best parameter-set.}
+\caption{The share of the different sub-algorithm in finding the optimal parameters. For each sub-algorithm (Default, CMA-ES, Transferer=Genetransferer or ANN), the percentage of instances on which this method gave the best parameter set. Each cell shows 2 figures: the first one considers all occurences of a method, no matter if another method also lead an equivalent parameter set, as good as the first one. The second figures only considers the first method (from left to right) that discovered the best parameter-set.}
 \label{table:hints}
 \end{table} 
 
 
 
 
-
- \begin{table*}[ht]
-\centering
-\begin{tabular}{l c c c c }
-\hline\hline
-Domain &\# goals & \# fluents  & \# objects  & mutexdensity   \\ 
-\hline
-Freecell & 2 & [28,34] 31.17, 1.68  & [32, 38] 35.17, 1.68  & [0.14, 0,17] 0.15, 0.005     \\
-Grid & [7,9] 8, 1  & [58,59] 74.07, 9.38 & [56,90] 72.07, 9.38  & [0.08, 0.1] 0.09, 0.009     \\
-Mprime & [8,9] 9, 1 & [32,40] 36, 2.09  & [42,52] 47, 2.009 & [0.03 0.03] 0.03, 0     \\
-IPC6 all& [1,110] 23.32, 19.2 & [4,217] 30.6, 25.5  & [7,301] 45.2, 35.16  & [0,0.48] 0.1, 0.07     \\
-\hline
-\end{tabular}
-\label{table:statistics}
-\caption{Statistics of some features per domains in the train-set. Values given are [min,max] average, standard deviation respectively. On feature is constant, one number is given.}
-\end{table*} 
-
 \begin{figure}[h!]
-  \centering
-    \includegraphics[width=0.5\textwidth]{results/freecell_train_objects_mutex-density.png}
-  \caption{Distribution of the features "number of objects" and "mutex-density" in train-set in domain Freecell.}
-\end{figure}
-
-\begin{figure}[h!]
-  \centering
-    \includegraphics[width=0.5\textwidth]{results/freecell_lao_objects_mutrate.png}
-  \caption{Relation of the feature "number of objects" and the parameter "mutation rate" in LaO, in the train-set in domain Freecell. Values of "mutatiom rate" are the optimal values found by LaO. This looks bad, but not unexpected. We can explain this. It is however questionable to show it.}
+	\centering
+	\includegraphics[width=0.5\textwidth]{results/freecell_lao_objects_mutrate.png}
+	\caption{Relation of the feature "number of objects" and the parameter "mutation rate" in LaO, in the train-set in domain Freecell. Values of 		"mutatiom rate" are the optimal values found by LaO. This looks bad, but not unexpected. We can explain this. It is however questionable to show 		it.}
+	\label{figure:laoobjectmutrate}  
 \end{figure}
 
 
 \begin{figure}[h!]
-  \centering
-    \includegraphics[width=0.5\textwidth]{results/freecell_test_objects_mutrate.png}
-  \caption{Relation of the feature "number of objects" and the parameter "mutation rate" as learned by the ANN, during evaluation on the test-set in domain Freecell.}
+	\centering
+	\includegraphics[width=0.5\textwidth]{results/freecell_test_objects_mutrate.png}
+	\caption{Relation of the feature "number of objects" and the parameter "mutation rate" as learned by the ANN, during evaluation on the test-set in 		domain Freecell.}
+	\label{figure:ANNobjectmutate}  
 \end{figure}
 
 
-
-
-Table \ref{table:domains} shows the data for each domain, as you can see from the approximately 100 instances from each domain we could use all of the training instances (108) only in the domain Freecell. In the other domains we got much less usable instances. The Mean Square Error (MSE) of the retrained ANN is shown for each domain. Note that since there can be multiple optimal parameters for the same instance (fitness-function is discrete), there might be an unavoidable error of the ANN.
-
-5 iterations of CMA-ES were carried out, followed by one ANN and one Genetransferer, and this cycle was iterated in the algorithm. This means that for example for the Grid domain LaO was running for 10 iterations and CMA-ES was called 50 times in total. One has to note that this is not much, but we were restricted by time.
-
-The ANN had 3 fully connected layers, and the hidden layer had the same number of neurons as the input. Learning was done by the conventional back-propagation algorithm, which is the default in FANN. In one iterations of LaO the ANN was only trained once for 50 iterations (called epochs in FANN) without reseting the weights, so that we avoid over-training. The aim of not reseting the weights was that the ANN makes a graded transition from the previous best known parameter-set to the new best known parameter-set, which could help optimization by trying some intermediate values. This means that over the 10 iterations of LaO in the domain Grid 500 iterations (epochs) of the ANN were carried out in total. However, note that the best parameters were trained with much less iterations, depending on the time when they were found. In the worst case, if the best parameter was found in the last iteration of LaO, it was trained for only 50 epochs and not used anymore, only recorded in the logs. This is why retraining is needed in the end.
-
-A parameter-set in LaO may come from different sources, namely it can be the default parameter-set, or requested from the CMA-ES, the Genetransferer or the ANN. It is an important information to know how good these sources work in optimization. Table \ref{table:hints} serves this purpose: it shows how each source contributes to the best parameter-settings in the end. For each source the first number shows the ratio the source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account. Note that the order of the sources is as it is in the table: for example if CMA-ES found a different parameter-settings with the same fitness as the default, that is not included in the first ratio, but it is included in the second. Analyzing both numbers can lead to interesting conclusions. For example, for domain Mprime the default parameter-settings was the optimal for 45\% of the instances, however, only in 2\% of the instances there was no other parameter-setting found with the same quality. In the domain Freecell, the share of ANN is quite high (18\%), moreover we can see that in most of the cases the other sources did not find a parameter-set equally good (17\%). While Genetransferer in Freecell take equal share (18\%) of all the best parameters, but only a part of them (8\%) were unique. Note that CMA-ES was returning the first hint in each iteration and had 5 times more possibilities than the ANN. Taking this into account both the ANN and Genetransferer made an important contribution to optimization.
+A parameter-set in LaO may come from different sources, namely it can be the default parameter-set, or requested from the CMA-ES, the Genetransferer or the ANN. It is an important information to know how good these sources work in optimization. Table \ref{table:hints} serves this purpose: it shows ths share of the sub-algorithms in finding the optimal parameter-set in LaO, i.e. how each source contributes to the best parameter-settings in the end. For each source the first number shows the ratio the source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account. Note that the order of the sources is as it is in the table: for example if CMA-ES found a different parameter-settings with the same fitness as the default, that is not included in the first ratio, but it is included in the second. Analyzing both numbers can lead to interesting conclusions. For example, for domain Mprime the default parameter-settings was the optimal for 45\% of the instances, however, only in 2\% of the instances there was no other parameter-setting found with the same quality. In the domain Freecell, the share of ANN is quite high (18\%), moreover we can see that in most of the cases the other sources did not find a parameter-set equally good (17\%). While Genetransferer in Freecell take equal share (18\%) of all the best parameters, but only a part of them (8\%) were unique. Note that CMA-ES was returning the first hint in each iteration and had 5 times more possibilities than the ANN. Taking this into account both the ANN and Genetransferer made an important contribution to optimization.
 
 Termination criterion in the competition was simply the available time, the algorithm was running for several weeks on our cluster, which is used also for other research, i.e. only a small number of 4 or 8-core processors were available for each domain in average. After stopping LaO, retraining was made with 300 ANN epochs with the best data, because the ANN's saved directly from LaO may be under-trained. The MSE error of the ANN did not decrease using more epochs, which indicates that 300 iterations are enough at least for this amount of data and for this size of the ANN. Tests with 1000 iterations did not produce better results and neither training the ANN uniquely with the first found best parameters.
+
+Figure \ref{figure:laoobjectmutrate} shows the optimal parameter-values for mutation-rate and the feature "number of objects" for each training instance in the domain Freecell after terminating. Figure \ref{figure:ANNobjectmutate} shows for the trained ANN the same feature and parameter for the test-instances. We can see here what kind of we get after training on the data produced by LaO. Note that these figures are the projection of the multidimensional feature- and parameter-space. The seeming unambiguity can have several explanations: (i) other features may be involved in the relation (ii) LaO was excuted for a short time, therefore the relation is far from the real, optimal parameter-sets (iii) the feature-set is too weak to resolve an unambiguity. Nevertheless, the ANN seems "cut trhough": it reduces the relation as shown in the figure and this is acceptable.
 
 The controlled parameters of DaE are described in table \ref{table:parameters}. For a detailed description of these parameters, see \cite{BibGECCO:2010}. The feature-set consists of 12 features. First there are 5 important features: the number of fluents, goals, predicates, objects and types. These were extracted from the domain file or the instance file using the PDDL parser. One further feature we think could even be more important is called mutex-density, which is the number of mutexes divided by the number of all fluent-pairs. We also kept 6 less important features: number of lines, words and byte-count - obtained by the linux command "wc" - of the instance and the domain file. These features were kept only for historical reasons: they were used in the beginning as some "dummy" features.
 
@@ -271,7 +276,7 @@ Since testing was also carried out on the cluster, the termination criterion for
 
 Note that since our termination criterion is number of evaluations, there was no unsolved instance. If an instance was unsolvable with default parameters within the specified time, it was dropped, if it was solvable, it is also solvable with any parameter-setting, moreover the running time does not depend on the computer. 
 
-Table \ref{table:domains} presents several quality-improvement ratios. Label "in LaO" means that the best found parameter is compared to the default. By definition this ratio can not be less than 1 for any instance. We also present quality-improvement ratios for the retrained ANN on the training-set and the test-set. In these later cases, numbers less then 1 are possible, but were rare. As it can be seen we achieved a considerable quality-gain in training, but the transfer of this improvement to the ANN-model was only partial. Reasons for this may be different. First, there is the unambiguity of the mapping, second, the ANN may not be complex enough for the mapping, but most probably the feature-set is not powerful enough. 
+Table \ref{table:domains} also presents several quality-improvement ratios. Label "in LaO" means that the best found parameter is compared to the default. By definition this ratio can not be less than 1 for any instance. We also present quality-improvement ratios for the retrained ANN on the training-set and the test-set. In these later cases, numbers less then 1 are possible, but were rare. As it can be seen we achieved a considerable quality-gain in training, but the transfer of this improvement to the ANN-model was only partial. Reasons for this may be different. First, there is the unambiguity of the mapping, second, the ANN may not be complex enough for the mapping, but most probably the feature-set is not powerful enough. 
 
 On the other hand, the ANN model generalizes excellently to the the independent test-set. Quality-improvement ratios dropped only by 0.01, i.e. the knowledge incorporated in the ANN was transferable to the test cases and usable almost to the same extent as for the train set.
 
